qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm14_call_args.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@arg_types = private unnamed_addr constant [7 x i8] c"iifb:v\00", align 1
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define private i64 @_hl.main.1(i64 %0, i64 %1, i64 %2, i64 %3, double %4, i1 %5) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %gpu_input_blob = alloca [25 x i8], align 1
  %dest_ptr = getelementptr inbounds [25 x i8], [25 x i8]* %gpu_input_blob, i64 0, i64 0
  %arg_i64_tmp = alloca i64, align 8
  store i64 %2, i64* %arg_i64_tmp, align 4
  %arg_i8_ptr = bitcast i64* %arg_i64_tmp to [8 x i8]*
  %6 = bitcast [8 x i8]* %arg_i8_ptr to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %dest_ptr, i8* align 1 %6, i64 8, i1 false)
  %dest_ptr7 = getelementptr inbounds [25 x i8], [25 x i8]* %gpu_input_blob, i64 0, i64 8
  %arg_i64_tmp8 = alloca i64, align 8
  store i64 %3, i64* %arg_i64_tmp8, align 4
  %arg_i8_ptr9 = bitcast i64* %arg_i64_tmp8 to [8 x i8]*
  %7 = bitcast [8 x i8]* %arg_i8_ptr9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %dest_ptr7, i8* align 1 %7, i64 8, i1 false)
  %dest_ptr10 = getelementptr inbounds [25 x i8], [25 x i8]* %gpu_input_blob, i64 0, i64 16
  %arg_f64_tmp = alloca double, align 8
  store double %4, double* %arg_f64_tmp, align 8
  %arg_i8_ptr11 = bitcast double* %arg_f64_tmp to [8 x i8]*
  %8 = bitcast [8 x i8]* %arg_i8_ptr11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %dest_ptr10, i8* align 1 %8, i64 8, i1 false)
  %dest_ptr12 = getelementptr inbounds [25 x i8], [25 x i8]* %gpu_input_blob, i64 0, i64 24
  %arg_i8 = zext i1 %5 to i8
  store i8 %arg_i8, i8* %dest_ptr12, align 1
  %gpu_input_blob_ptr = getelementptr inbounds [25 x i8], [25 x i8]* %gpu_input_blob, i64 0, i64 0
  %9 = call i8 @gpu_call(i64 %0, i64 %1, i64 25, i8* %gpu_input_blob_ptr, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @arg_types, i32 0, i32 0))
  call void @validate_gpu_response(i8 %9)
  ret i64 %0
}

declare i8 @gpu_call(i64, i64, i64, i8*, i8*)

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #1 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #1 {
entry:
  %error_message = call i8* @gpu_get_error()
  %is_null = icmp eq i8* %error_message, null
  %error_message_nonnull = select i1 %is_null, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @no_gpu_error, i32 0, i32 0), i8* %error_message
  call void @panic_str(i32 70002, i8* %error_message_nonnull)
  unreachable
}

declare i8* @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, i8*) #2

attributes #0 = { argmemonly nofree nounwind willreturn }
attributes #1 = { noinline }
attributes #2 = { noreturn }
