qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm14_dispose_context.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define private void @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call i8 @gpu_discard(i64 %0)
  call void @validate_gpu_response(i8 %1)
  ret void
}

declare i8 @gpu_discard(i64)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call i8* @gpu_get_error()
  %is_null = icmp eq i8* %error_message, null
  %error_message_nonnull = select i1 %is_null, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @no_gpu_error, i32 0, i32 0), i8* %error_message
  call void @panic_str(i32 70002, i8* %error_message_nonnull)
  unreachable
}

declare i8* @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, i8*) #1

attributes #0 = { noinline }
attributes #1 = { noreturn }
