qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm14_read_result_float.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define private { i64, double } @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %int_result = alloca i64, align 8
  %result_ptr = bitcast i64* %int_result to i8*
  %read_status = call i8 @gpu_get_result(i64 %0, i64 8, i8* %result_ptr)
  call void @validate_gpu_response(i8 %read_status)
  %float_result_ptr = bitcast i64* %int_result to double*
  %float_result = load double, double* %float_result_ptr, align 8
  %mrv = insertvalue { i64, double } undef, i64 %0, 0
  %mrv6 = insertvalue { i64, double } %mrv, double %float_result, 1
  ret { i64, double } %mrv6
}

declare i8 @gpu_get_result(i64, i64, i8*)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call i8* @gpu_get_error()
  %is_null = icmp eq i8* %error_message, null
  %error_message_nonnull = select i1 %is_null, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @no_gpu_error, i32 0, i32 0), i8* %error_message
  call void @panic_str(i32 70002, i8* %error_message_nonnull)
  unreachable
}

declare i8* @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, i8*) #1

attributes #0 = { noinline }
attributes #1 = { noreturn }
