qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm14_call_ret_float.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@arg_types = private unnamed_addr constant [3 x i8] c":f\00", align 1
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define private i64 @_hl.main.1(i64 %0, i64 %1) {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  store i64 %1, i64* %"2_1", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  %"2_12" = load i64, i64* %"2_1", align 4
  %gpu_input_blob = alloca [0 x i8], align 1
  %gpu_input_blob_ptr = getelementptr inbounds [0 x i8], [0 x i8]* %gpu_input_blob, i64 0, i64 0
  %2 = call i8 @gpu_call(i64 %"2_01", i64 %"2_12", i64 0, i8* %gpu_input_blob_ptr, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @arg_types, i32 0, i32 0))
  call void @validate_gpu_response(i8 %2)
  store i64 %"2_01", i64* %"4_0", align 4
  %"4_03" = load i64, i64* %"4_0", align 4
  store i64 %"4_03", i64* %"0", align 4
  %"04" = load i64, i64* %"0", align 4
  ret i64 %"04"
}

declare i8 @gpu_call(i64, i64, i64, i8*, i8*)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call i8* @gpu_get_error()
  %is_null = icmp eq i8* %error_message, null
  %error_message_nonnull = select i1 %is_null, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @no_gpu_error, i32 0, i32 0), i8* %error_message
  call void @panic_str(i32 70002, i8* %error_message_nonnull)
  unreachable
}

declare i8* @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, i8*) #1

attributes #0 = { noinline }
attributes #1 = { noreturn }
